<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BambiGuard</string>
    <string name="mapbox_access_token">sk.eyJ1IjoiY2xlbWVuc2xvc2JpY2hsZXIiLCJhIjoiY2t3NmU0MDd0MWkyaTJ2cDY3dnN5MjM3dCJ9.8mvRQ8sSzM1lotK5Ozwh8Q</string>
    <string name="action_settings">Einstellungen</string>
    <string name="disconnected">Getrennt</string>
    <string name="name">Name</string>
    <string name="connected_drone">Verbundene Drohne</string>
    <string name="dji_mavic_2_enterprise_dual">DJI Mavic 2 Enterprise Dual</string>
    <string name="flightending">Flugende</string>
    <string name="return_to_home">Return to home</string>
    <string name="manual_landing">Manuelles Landen</string>
    <string name="legal_and_disclaimer"><![CDATA[Rechtliches & Haftungsausschluss]]></string>
    <string name="disclaimer">Haftungsausschluss</string>
    <string name="legal_disclaimer_text">Sie nehmen zur Kenntnis den Nachweis für Fern- piloten erfolgreich abgeschlossen zu haben</string>
    <string name="start">Start</string>
    <string name="pilot">Pilot</string>
    <string name="helper">Helfer</string>
    <string name="your_name">Dein Name</string>
    <string name="date">Datum</string>
    <string name="time">Uhrzeit</string>
    <string name="flight_possible">Drohnenflug möglich</string>
    <string name="connected_helpers">Verbundene Helfer</string>
    <string name="add_helper">Helfer hinzufügen</string>
    <string name="flight_planning">Flugplanung</string>
    <string name="flight_overview">Flugübersicht</string>
    <string name="map">Karte</string>
    <string name="finish">Beenden</string>
    <string name="next">Weiter</string>
    <string name="join_flight">Flug beitreten</string>
    <string name="in_flight_of">Im Flug von</string>
    <string name="quit_flight">Aus Flug aussteigen</string>
    <string name="status">Status</string>
    <string name="remaining_flight_duration">Verbleibende Flugdauer</string>
    <string name="flying">fliegend</string>
    <string name="follow_the_arrow_like_a_compass">Folgend Sie dem Pfeil wie einem Kompass</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</string>
    <string name="bambi">Bambi</string>
    <string name="_25_minutes">25 Minuten</string>
    <string name="drone">Drohne</string>
    <string name="compass">Kompass</string>
    <string name="connected">Verbunden</string>
    <string name="connect_drone_to_continue">Drohne verbinden um fortzufahren</string>
    <string name="abort">Abbrechen</string>
    <string name="Continue">Weiter</string>
    <string name="connect_to_internet_to_continue">Mit dem Internet verbinden um fortzufahren</string>
    <string name="please_wait_until_the_pilot_adds_you">Bitte warten bis Sie der Pilot hinzugefügt hat...</string>
    <string name="flight_of_">Flug von </string>
    <string name="_join"> beitreten</string>
    <string name="available_helpers">Verfügbare Helfer</string>
    <string name="add_marker">Marker hinzufügen</string>
    <string name="remove_marker">Maker entfernen</string>
    <string name="error_when_connecting_with_server">Fehler beim Verbinden mit dem Server</string>
    <string name="please_turn_on_wifi_to_connect_to_the_server">Bitte schalten Sie WLAN oder Mobile Daten ein um eine Verbindung zum Server herzustellen.</string>
    <string name="ok">OK</string>
    <string name="successful">erfolgreich</string>
    <string name="unknown">unbekannt</string>
    <string name="Start_flight">Flug starten</string>
    <string name="Found_bambis">Rehkitze gefunden</string>
    <string name="Field_area">Feldgröße</string>
    <string name="flight_duration">Flugdauer</string>
    <string name="Flight_ending">Flugende</string>
    <string name="detected_bambis">Rehkitze erkannt</string>
    <string name="join_a_flight">Steigen Sie in einen Flug ein</string>
    <string name="enable_gps">GPS einschalten</string>
    <string name="please_enable_gps_to_allow_navigation">Bitte schalten Sie GPS ein, um eine Navigation zu erlauben.</string>
    <string name="no_bambi_found_yet">noch kein \nRehkitz gefunden</string>
    <string name="wait">Warten</string>

</resources>
