<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FlightPlanning2Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutName"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewName"
                style="@style/headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextName"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutFlightEnding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textViewFlightEnding"
                style="@style/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flightending" />

            <RadioGroup
                android:id="@+id/radioGroupFlightending"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@id/radioButtonReturnToHome"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonReturnToHome"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:text="@string/return_to_home" />

                <RadioButton
                    android:id="@+id/radioButtonManualLanding"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:text="@string/manual_landing" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutHelper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutLegal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutFlightEnding">

            <TextView
                android:id="@+id/textViewConnectedHelpers"
                style="@style/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connected_helpers" />

            <ListView
                android:id="@+id/listViewHelpers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textViewAvailableHelpers"
                style="@style/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_helpers" />

            <ListView
                android:id="@+id/listViewAvailableHelpers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutLegal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textViewLegalHeadline"
                style="@style/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer" />

            <TextView
                android:id="@+id/textViewLegal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legal_disclaimer_text" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>