<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FlightEndActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@mipmap/bambi_guard_logo"
        app:titleTextColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textViewFlightOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flight_overview"
        style="@style/headline"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutFlightOverview"
        style="@style/roundInfoBadge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFlightOverview">

        <LinearLayout
            android:id="@+id/linearLayout15"
            style="@style/roundInfoBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Found_bambis"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewRescuedBambis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            style="@style/roundInfoBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helper"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewHelperNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            style="@style/roundInfoBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout1"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Field_area"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewFieldSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/roundInfoBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_duration"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewFlightDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            style="@style/roundInfoBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Flight_ending"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSearchStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            style="@style/roundInfoBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
            app:layout_constraintStart_toEndOf="@+id/linearLayout15"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detected_bambis"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDetectedBambis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonFinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutFlightOverview">

        <TextView
            android:id="@+id/textViewMap"
            style="@style/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map" />

        <com.mapbox.mapboxsdk.maps.MapView
            android:layout_weight="1"
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:mapbox_cameraTargetLat="48.21"
            app:mapbox_cameraTargetLng="16.36"
            app:mapbox_cameraZoom="15"
            app:mapbox_styleUrl="mapbox://styles/mapbox/satellite-streets-v11" />

        <TextView
            android:id="@+id/textViewHelpers"
            style="@style/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helper" />

        <ListView
            android:id="@+id/listViewHelpers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>