<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HelperFlightActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorWhite" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            style="@style/roundInfoBadge"
            android:layout_width="150sp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            style="@style/roundInfoBadge"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_flight_duration"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewRemainingFlightDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageViewCompass"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_marginTop="64sp"
        android:contentDescription="@string/compass"
        android:src="@drawable/ic_compass"
        app:layout_constraintBottom_toTopOf="@id/buttonLeaveFlight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutStatus" />

    <Button
        android:id="@+id/buttonLeaveFlight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/quit_flight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/drone"
        android:scaleX="0.3"
        android:scaleY="0.3"
        android:src="@drawable/dji_mavic_2_enterprise_dual"
        android:translationX="-150sp"
        android:translationY="-150sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_bambi_found_yet"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCompass"
        app:layout_constraintEnd_toEndOf="@+id/imageViewCompass"
        app:layout_constraintStart_toStartOf="@+id/imageViewCompass"
        app:layout_constraintTop_toTopOf="@+id/imageViewCompass" />

    <Button
        android:id="@+id/buttonRescueBambi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rehkitz\ngerettet"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCompass"
        app:layout_constraintEnd_toEndOf="@+id/imageViewCompass"
        app:layout_constraintStart_toStartOf="@+id/imageViewCompass"
        app:layout_constraintTop_toTopOf="@+id/imageViewCompass" />

</androidx.constraintlayout.widget.ConstraintLayout>